# memory

./: .gitignore  CMakeLists.txt  a.out  memory  memory.hpp  memory_attr.hpp  memory_concepts.hpp  memory_io.hpp  memory_reserve.hpp  test.cpp  vritual_memory.hpp
accessor/: accessor.hpp  accessor_forward.hpp  accessor_utility.hpp
accessor/query/: vm_access_query.hpp
accessor/type/: vm_access_type.hpp
allocator/: allocator.hpp  page.hpp
allocator/page/: page.hpp
block/: block.hpp
example/: a.out  iteration.cpp  page.cpp  vmem_reserve.cpp
examples/memory_model/io_map/: io_map.cpp
examples/memory_model/virtual_memory/: virtual_memory.cpp
file_map/: controller.hpp
include/memory/: access.hpp  basic_memory_model.hpp  memory.h  memory_model.hpp  standard_heap.h  system_memory.h
include/memory/access/: forward.hpp  io_map.hpp  virtual_memory.hpp
include/memory/defines/: alloc.h
include/memory/defines/export/: export.h
include/memory/defines/opaque/: opaque.h
include/memory/export/: init.h  memory.h
include/memory/export/memory_manager/: nonpaged.h  standard_heap.h
include/memory/export/pooling/: dynamic_pooling.h  static_pooling.h
include/memory/extension/opencl/: unmapped.hpp  unmapped_rdonly.hpp
include/memory/interface/: memory_manager.h  memory_pooling.h
include/memory/io_map/: io_map.hpp  viewer.hpp
include/memory/mman/: mman_traits.h
include/memory/mman/nonpaged/: nonpaged_init.h  nonpaged_manip.h
include/memory/mman/standard_heap/: stdheap.h  stdheap_alloc.h  stdheap_init.h  stdheap_type.h
include/memory/module/: main.h
include/memory/module/export/: stdheap.h  winheap.h
include/memory/pointer/: address_based.hpp  declare.hpp  external_device.hpp  forward.hpp
include/memory/pooling/: dynamic_pooling_traits.h  static_pooling_traits.h
include/memory/pooling/dynamic/: dynamic_pool.h  dynamic_pool_alloc.h  dynamic_pool_init.h  dynamic_pool_type.h
include/memory/pooling/static/: static_pool.h  static_pool_alloc.h  static_pool_init.h  static_pool_type.h
include/memory/region/: access_pointer.hpp  read_only.hpp  region.hpp  write_only.hpp
include/memory/system/: allocate.h
include/memory/system/allocation/: system_allocate.h  system_page.h
include/memory/system/support/: system_support.h
include/memory/traits/: io_map.hpp  virtual_memory.hpp
include/memory/virtual_memory/: virtual_memory.hpp  virtual_memory_access.hpp
io_map/: io_map.hpp
libs/x64/debug/: synapse-memory-mman-osspec.idb  synapse-memory-mman-osspec.lib  synapse-memory-mman.idb  synapse-memory-mman.lib  synapse-memory-pooling-dynamic.idb  synapse-memory-pooling-dynamic.lib  synapse-memory-pooling-static.idb  synapse-memory-pooling-static.lib  synapse-memory.lib
libs/x64/windows/: x64_memory_traits.idb  x64_memory_traits.lib
memory_range/: memory_range.hpp
modules/x64/debug/: synapse-memory-mman-module.exp  synapse-memory-mman-module.lib
project_files/vs2022/synapse-memory/: synapse-memory.sln
project_files/vs2022/synapse-memory-mman/: synapse-memory-mman.sln
project_files/vs2022/synapse-memory-mman/synapse-memory-mman-dll/: synapse-memory-mman-dll.vcxproj  synapse-memory-mman-dll.vcxproj.filters
project_files/vs2022/synapse-memory-mman/synapse-memory-mman-module/: synapse-memory-mman-module.vcxproj  synapse-memory-mman-module.vcxproj.filters
project_files/vs2022/synapse-memory-mman/synapse-memory-mman-osspec/: synapse-memory-mman-osspec.vcxproj  synapse-memory-mman-osspec.vcxproj.filters
project_files/vs2022/synapse-memory-pooling-static/: synapse-memory-pooling-static.sln
slot/: fixed_slot.hpp  slot.hpp
source/: CMakeLists.txt  dynamic_pooling.c
source/c/: dynamic_pooling.c  memory.c  standard_heap.c  static_pooling.c
source/c/mman/os_specific/winheap/: winheap_alloc.c  winheap_init.c
source/c/mman/os_specific/winheap/details/: memory_mman_winheap_alloc.c  memory_mman_winheap_init.c
source/c/mman/standard_heap/: stdheap_alloc.c  stdheap_init.c
source/c/mman/standard_heap/details/: memory_mman_stdheap_alloc.c  memory_mman_stdheap_init.c
source/c/module/: main.c
source/c/module/export/: stdheap.c  winheap.c
source/c/module/export/memory_pooling/dynamic_pooling/: dynamic_pool.c
source/c/module/export/memory_pooling/static_pooling/: static_pooling.c
source/c/pooling/dynamic/: dynamic_pool_alloc.c  dynamic_pool_init.c
source/c/pooling/dynamic/details/: memory_pooling_dynamic_alloc.c  memory_pooling_dynamic_init.c
source/c/pooling/static/: static_pool_alloc.c  static_pool_init.c
source/c/pooling/static/details/: memory_pooling_static_alloc.c  memory_pooling_static_init.c
source/lib/: CMakeLists.txt  memory_mman_stdheap_init.c  memory_pooling_dynamic_alloc.c  memory_pooling_dynamic_init.c  memory_pooling_static_init.c
source/lib/mman/nonpaged/: CMakeLists.txt  nonpaged_init.c  nonpaged_manip.c
source/lib/mman/nonpaged/details/: mman_nonpaged_init.c  mman_nonpaged_manip.c
source/lib/mman/standard_heap/: CMakeLists.txt  stdheap_alloc.c  stdheap_init.c
source/lib/mman/standard_heap/details/: memory_mman_stdheap_alloc.c  memory_mman_stdheap_init.c
source/lib/pooling/dynamic/: CMakeLists.txt  dynamic_pool_alloc.c  dynamic_pool_init.c
source/lib/pooling/dynamic/details/: memory_pooling_dynamic_alloc.c  memory_pooling_dynamic_init.c
source/lib/pooling/static/: CMakeLists.txt  static_pool_alloc.c  static_pool_init.c
source/lib/pooling/static/details/: memory_pooling_static_alloc.c  memory_pooling_static_init.c
source/lib/system/: CMakeLists.txt  allocate.c
source/lib/system/allocation/: system_allocate.c  system_page.c
source/lib/system/support/: system_support.c
source/shared_lib/: CMakeLists.txt  memory.c  standard_heap.c  static_pooling.c
source/shared_lib/memory_manager/: nonpaged.c  standard_heap.c
source/shared_lib/pooling/: dynamic_pooling.c  static_pooling.c
source/traits/: io_map.cpp  io_map_viewer.cpp  virtual_memory.cpp
virtual_memory/: controller.hpp
vmem/: controller.hpp  vmem.hpp  vmem_controller.hpp  vmem_define.hpp  vmem_reserve.hpp
(+129 files in other folders)
